drm/i915/gt: Skip TLB invalidations once wedged (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1240,6 +1240,7 @@
 	patches.kernel.org/5.19.4-022-drm-amdgpu-change-vram-width-algorithm-for-vra.patch
 	patches.kernel.org/5.19.4-023-drm-i915-gt-Ignore-TLB-invalidations-on-idle-e.patch
 	patches.kernel.org/5.19.4-024-drm-i915-gt-Invalidate-TLB-of-the-OA-unit-at-T.patch
+	patches.kernel.org/5.19.4-025-drm-i915-gt-Skip-TLB-invalidations-once-wedged.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
