--- a/series.conf
+++ b/series.conf
@@ -1248,6 +1248,7 @@
 	patches.kernel.org/5.19.4-030-tracing-perf-Fix-double-put-of-trace-event-whe.patch
 	patches.kernel.org/5.19.4-031-tracing-eprobes-Do-not-allow-eprobes-to-use-st.patch
 	patches.kernel.org/5.19.4-032-tracing-eprobes-Do-not-hardcode-comm-as-a-stri.patch
+	patches.kernel.org/5.19.4-033-tracing-eprobes-Fix-reading-of-string-fields.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
