--- a/series.conf
+++ b/series.conf
@@ -1223,6 +1223,7 @@
 	patches.kernel.org/5.19.4-005-x86-mm-Use-proper-mask-when-setting-PUD-mappin.patch
 	patches.kernel.org/5.19.4-006-rds-add-missing-barrier-to-release_refill.patch
 	patches.kernel.org/5.19.4-007-drm-i915-gem-Remove-shared-locking-on-freeing-.patch
+	patches.kernel.org/5.19.4-008-locking-atomic-Make-test_and_-_bit-ordered-on-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
