selftests: forwarding: Fix failing tests with old libnet (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1303,6 +1303,7 @@
 	patches.kernel.org/5.19.4-085-net-dsa-felix-suppress-non-changes-to-the-tagg.patch
 	patches.kernel.org/5.19.4-086-net-bgmac-Fix-a-BUG-triggered-by-wrong-bytes_c.patch
 	patches.kernel.org/5.19.4-087-net-atm-bring-back-zatm-uAPI.patch
+	patches.kernel.org/5.19.4-088-selftests-forwarding-Fix-failing-tests-with-ol.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
