i40e: Fix to stop tx_timeout recovery if GLOBR fails (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1446,6 +1446,7 @@
 	patches.kernel.org/5.19.4-228-i2c-imx-Make-sure-to-unregister-adapter-on-rem.patch
 	patches.kernel.org/5.19.4-229-i40e-Fix-tunnel-checksum-offload-with-fragment.patch
 	patches.kernel.org/5.19.4-230-regulator-pca9450-Remove-restrictions-for-regu.patch
+	patches.kernel.org/5.19.4-231-i40e-Fix-to-stop-tx_timeout-recovery-if-GLOBR-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
