--- a/series.conf
+++ b/series.conf
@@ -1259,6 +1259,7 @@
 	patches.kernel.org/5.19.4-041-apparmor-fix-quiet_denied-for-file-rules.patch
 	patches.kernel.org/5.19.4-042-apparmor-fix-absroot-causing-audited-secids-to.patch
 	patches.kernel.org/5.19.4-043-apparmor-Fix-failed-mount-permission-check-err.patch
+	patches.kernel.org/5.19.4-044-apparmor-fix-aa_label_asxprint-return-check.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
