nios2: add force_successful_syscall_return() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1385,6 +1385,7 @@
 	patches.kernel.org/5.19.4-167-nios2-traced-syscall-does-need-to-check-the-sy.patch
 	patches.kernel.org/5.19.4-168-nios2-fix-syscall-restart-checks.patch
 	patches.kernel.org/5.19.4-169-nios2-restarts-apply-only-to-the-first-sigfram.patch
+	patches.kernel.org/5.19.4-170-nios2-add-force_successful_syscall_return.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
