--- a/series.conf
+++ b/series.conf
@@ -1550,6 +1550,7 @@
 	patches.kernel.org/5.19.4-332-ASoC-nau8821-Don-t-unconditionally-free-interr.patch
 	patches.kernel.org/5.19.4-333-riscv-mmap-with-PROT_WRITE-but-no-PROT_READ-is.patch
 	patches.kernel.org/5.19.4-334-RISC-V-Add-fast-call-path-of-crash_kexec.patch
+	patches.kernel.org/5.19.4-335-ALSA-hda-realtek-Enable-speaker-and-mute-LEDs-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
