fs/ntfs3: Fix using uninitialized value n when calling indx_read (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1374,6 +1374,7 @@
 	patches.kernel.org/5.19.4-156-perf-parse-events-Fix-segfault-when-event-pars.patch
 	patches.kernel.org/5.19.4-157-perf-tests-Fix-Track-with-sched_switch-test-fo.patch
 	patches.kernel.org/5.19.4-158-dpaa2-eth-trace-the-allocated-address-instead-.patch
+	patches.kernel.org/5.19.4-159-fs-ntfs3-Fix-using-uninitialized-value-n-when-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
