netfilter: nf_tables: use READ_ONCE and WRITE_ONCE for shared generation id access (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1403,6 +1403,7 @@
 	patches.kernel.org/5.19.4-185-RDMA-mlx5-Use-the-proper-number-of-ports.patch
 	patches.kernel.org/5.19.4-186-RDMA-cxgb4-fix-accept-failure-due-to-increased.patch
 	patches.kernel.org/5.19.4-187-netfilter-nfnetlink-re-enable-conntrack-expect.patch
+	patches.kernel.org/5.19.4-188-netfilter-nf_tables-use-READ_ONCE-and-WRITE_ON.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
