cxl: Fix a memory leak in an error handling path (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1509,6 +1509,7 @@
 	patches.kernel.org/5.19.4-291-mmc-tmio-avoid-glitches-when-resetting.patch
 	patches.kernel.org/5.19.4-292-scsi-ufs-ufs-exynos-Change-ufs-phy-control-seq.patch
 	patches.kernel.org/5.19.4-293-pinctrl-intel-Check-against-matching-data-inst.patch
+	patches.kernel.org/5.19.4-294-cxl-Fix-a-memory-leak-in-an-error-handling-pat.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
