--- a/series.conf
+++ b/series.conf
@@ -1571,6 +1571,7 @@
 	patches.kernel.org/5.19.4-353-f2fs-fix-to-do-sanity-check-on-segment-type-in.patch
 	patches.kernel.org/5.19.4-354-smb3-check-xattr-value-length-earlier.patch
 	patches.kernel.org/5.19.4-355-powerpc-64-Init-jump-labels-before-parse_early.patch
+	patches.kernel.org/5.19.4-356-venus-pm_helpers-Fix-warning-in-OPP-during-pro.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
