usb: cdns3 fix use-after-free at workaround 2 (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1478,6 +1478,7 @@
 	patches.kernel.org/5.19.4-260-staging-r8188eu-add-error-handling-of-rtw_read.patch
 	patches.kernel.org/5.19.4-261-staging-r8188eu-add-error-handling-of-rtw_read.patch
 	patches.kernel.org/5.19.4-262-staging-r8188eu-add-error-handling-of-rtw_read.patch
+	patches.kernel.org/5.19.4-263-usb-cdns3-fix-use-after-free-at-workaround-2.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
