--- a/series.conf
+++ b/series.conf
@@ -1233,6 +1233,7 @@
 	patches.kernel.org/5.19.4-015-mmc-pxamci-Fix-another-error-handling-path-in-.patch
 	patches.kernel.org/5.19.4-016-mmc-pxamci-Fix-an-error-handling-path-in-pxamc.patch
 	patches.kernel.org/5.19.4-017-mmc-meson-gx-Fix-an-error-handling-path-in-mes.patch
+	patches.kernel.org/5.19.4-018-btrfs-unset-reloc-control-if-transaction-commi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
