Input: mt6779-keypad - match hardware matrix organization (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1318,6 +1318,7 @@
 	patches.kernel.org/5.19.4-100-pinctrl-qcom-sm8250-Fix-PDC-map.patch
 	patches.kernel.org/5.19.4-101-rtc-spear-set-range-max.patch
 	patches.kernel.org/5.19.4-102-Input-exc3000-fix-return-value-check-of-wait_f.patch
+	patches.kernel.org/5.19.4-103-Input-mt6779-keypad-match-hardware-matrix-orga.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
