dpaa2-eth: trace the allocated address instead of page struct (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1373,6 +1373,7 @@
 	patches.kernel.org/5.19.4-155-i2c-qcom-geni-Fix-GPI-DMA-buffer-sync-back.patch
 	patches.kernel.org/5.19.4-156-perf-parse-events-Fix-segfault-when-event-pars.patch
 	patches.kernel.org/5.19.4-157-perf-tests-Fix-Track-with-sched_switch-test-fo.patch
+	patches.kernel.org/5.19.4-158-dpaa2-eth-trace-the-allocated-address-instead-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
