SUNRPC: Fix xdr_encode_bool() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1289,6 +1289,7 @@
 	patches.kernel.org/5.19.4-071-net-atlantic-fix-aq_vec-index-out-of-range-err.patch
 	patches.kernel.org/5.19.4-072-m68k-coldfire-device.c-protect-FLEXCAN-blocks.patch
 	patches.kernel.org/5.19.4-073-sunrpc-fix-expiry-of-auth-creds.patch
+	patches.kernel.org/5.19.4-074-SUNRPC-Fix-xdr_encode_bool.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
