--- a/series.conf
+++ b/series.conf
@@ -1538,6 +1538,7 @@
 	patches.kernel.org/5.19.4-320-vfio-Clear-the-caps-buf-to-NULL-after-free.patch
 	patches.kernel.org/5.19.4-321-mips-cavium-octeon-Fix-missing-of_node_put-in-.patch
 	patches.kernel.org/5.19.4-322-iommu-io-pgtable-arm-v7s-Add-a-quirk-to-allow-.patch
+	patches.kernel.org/5.19.4-323-ASoC-Intel-avs-Set-max-DMA-segment-size.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
