f2fs: fix to avoid use f2fs_bug_on() in f2fs_new_node_page() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1567,6 +1567,7 @@
 	patches.kernel.org/5.19.4-349-ALSA-timer-Use-deferred-fasync-helper.patch
 	patches.kernel.org/5.19.4-350-ALSA-pcm-Use-deferred-fasync-helper.patch
 	patches.kernel.org/5.19.4-351-ALSA-control-Use-deferred-fasync-helper.patch
+	patches.kernel.org/5.19.4-352-f2fs-fix-to-avoid-use-f2fs_bug_on-in-f2fs_new_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
