ice: Ignore error message when setting same promiscuous mode (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1441,6 +1441,7 @@
 	patches.kernel.org/5.19.4-223-ice-Fix-double-VLAN-error-when-entering-promis.patch
 	patches.kernel.org/5.19.4-224-ice-Ignore-EEXIST-when-setting-promisc-mode.patch
 	patches.kernel.org/5.19.4-225-ice-Fix-clearing-of-promisc-mode-with-bridge-o.patch
+	patches.kernel.org/5.19.4-226-ice-Ignore-error-message-when-setting-same-pro.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
