ASoC: SOF: Intel: hda: add sanity check on SSP index reported by NHLT (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1551,6 +1551,7 @@
 	patches.kernel.org/5.19.4-333-riscv-mmap-with-PROT_WRITE-but-no-PROT_READ-is.patch
 	patches.kernel.org/5.19.4-334-RISC-V-Add-fast-call-path-of-crash_kexec.patch
 	patches.kernel.org/5.19.4-335-ALSA-hda-realtek-Enable-speaker-and-mute-LEDs-.patch
+	patches.kernel.org/5.19.4-336-ASoC-SOF-Intel-hda-add-sanity-check-on-SSP-ind.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
