RDMA: Handle the return code from dma_resv_wait_timeout() properly (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1218,6 +1218,7 @@
 	patches.kernel.org/5.19.3-008-Linux-5.19.3.patch
 	patches.kernel.org/5.19.4-001-ALSA-info-Fix-llseek-return-value-when-using-c.patch
 	patches.kernel.org/5.19.4-002-ALSA-hda-realtek-Add-quirk-for-Clevo-NS50PU-NS.patch
+	patches.kernel.org/5.19.4-003-RDMA-Handle-the-return-code-from-dma_resv_wait.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
