Revert "ALSA: hda: Fix page fault in snd_hda_codec_shutdown()" (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1577,6 +1577,7 @@
 	patches.kernel.org/5.19.4-359-f2fs-revive-F2FS_IOC_ABORT_VOLATILE_WRITE.patch
 	patches.kernel.org/5.19.4-360-f2fs-fix-null-ptr-deref-in-f2fs_get_dnode_of_d.patch
 	patches.kernel.org/5.19.4-361-scsi-ufs-ufs-mediatek-Fix-build-error-and-type.patch
+	patches.kernel.org/5.19.4-362-Revert-ALSA-hda-Fix-page-fault-in-snd_hda_code.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
