mmc: pxamci: Fix an error handling path in pxamci_probe() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1231,6 +1231,7 @@
 	patches.kernel.org/5.19.4-013-s390-ap-fix-crash-on-older-machines-based-on-Q.patch
 	patches.kernel.org/5.19.4-014-ata-libata-eh-Add-missing-command-name.patch
 	patches.kernel.org/5.19.4-015-mmc-pxamci-Fix-another-error-handling-path-in-.patch
+	patches.kernel.org/5.19.4-016-mmc-pxamci-Fix-an-error-handling-path-in-pxamc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
