--- a/series.conf
+++ b/series.conf
@@ -1375,6 +1375,7 @@
 	patches.kernel.org/5.19.4-157-perf-tests-Fix-Track-with-sched_switch-test-fo.patch
 	patches.kernel.org/5.19.4-158-dpaa2-eth-trace-the-allocated-address-instead-.patch
 	patches.kernel.org/5.19.4-159-fs-ntfs3-Fix-using-uninitialized-value-n-when-.patch
+	patches.kernel.org/5.19.4-160-fs-ntfs3-Fix-NULL-deref-in-ntfs_update_mftmirr.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
