nios2: restarts apply only to the first sigframe we build.. (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1384,6 +1384,7 @@
 	patches.kernel.org/5.19.4-166-nios2-don-t-leave-NULLs-in-sys_call_table.patch
 	patches.kernel.org/5.19.4-167-nios2-traced-syscall-does-need-to-check-the-sy.patch
 	patches.kernel.org/5.19.4-168-nios2-fix-syscall-restart-checks.patch
+	patches.kernel.org/5.19.4-169-nios2-restarts-apply-only-to-the-first-sigfram.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
