--- a/series.conf
+++ b/series.conf
@@ -1254,6 +1254,7 @@
 	patches.kernel.org/5.19.4-036-tracing-Have-filter-accept-common_cpu-to-be-co.patch
 	patches.kernel.org/5.19.4-037-ALSA-usb-audio-More-comprehensive-mixer-map-fo.patch
 	patches.kernel.org/5.19.4-038-ALSA-hda-Fix-crash-due-to-jack-poll-in-suspend.patch
+	patches.kernel.org/5.19.4-039-dt-bindings-usb-mtk-xhci-Allow-wakeup-interrup.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
