--- a/series.conf
+++ b/series.conf
@@ -1557,6 +1557,7 @@
 	patches.kernel.org/5.19.4-339-ASoC-Intel-sof_nau8825-Move-quirk-check-to-the.patch
 	patches.kernel.org/5.19.4-340-watchdog-export-lockup_detector_reconfigure.patch
 	patches.kernel.org/5.19.4-341-powerpc-watchdog-introduce-a-NMI-watchdog-s-fa.patch
+	patches.kernel.org/5.19.4-342-powerpc-pseries-mobility-set-NMI-watchdog-fact.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
