--- a/series.conf
+++ b/series.conf
@@ -1363,6 +1363,7 @@
 	patches.kernel.org/5.19.4-145-tools-build-Switch-to-new-openssl-API-for-test.patch
 	patches.kernel.org/5.19.4-146-NTB-ntb_tool-uninitialized-heap-data-in-tool_f.patch
 	patches.kernel.org/5.19.4-147-nfp-ethtool-fix-the-display-error-of-ethtool-m.patch
+	patches.kernel.org/5.19.4-148-xen-xenbus-fix-return-type-in-xenbus_file_read.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
