btrfs: reset RO counter on block group if we fail to relocate (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1234,6 +1234,7 @@
 	patches.kernel.org/5.19.4-016-mmc-pxamci-Fix-an-error-handling-path-in-pxamc.patch
 	patches.kernel.org/5.19.4-017-mmc-meson-gx-Fix-an-error-handling-path-in-mes.patch
 	patches.kernel.org/5.19.4-018-btrfs-unset-reloc-control-if-transaction-commi.patch
+	patches.kernel.org/5.19.4-019-btrfs-reset-RO-counter-on-block-group-if-we-fa.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
