--- a/series.conf
+++ b/series.conf
@@ -1547,6 +1547,7 @@
 	patches.kernel.org/5.19.4-329-ASoC-rsnd-care-default-case-on-rsnd_ssiu_busif.patch
 	patches.kernel.org/5.19.4-330-riscv-dts-sifive-Add-fu740-topology-informatio.patch
 	patches.kernel.org/5.19.4-331-riscv-dts-canaan-Add-k210-topology-information.patch
+	patches.kernel.org/5.19.4-332-ASoC-nau8821-Don-t-unconditionally-free-interr.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
