bpf: Acquire map uref in .init_seq_private for sock{map,hash} iterator (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1282,6 +1282,7 @@
 	patches.kernel.org/5.19.4-064-bpf-Acquire-map-uref-in-.init_seq_private-for-.patch
 	patches.kernel.org/5.19.4-065-bpf-Acquire-map-uref-in-.init_seq_private-for-.patch
 	patches.kernel.org/5.19.4-066-bpf-Acquire-map-uref-in-.init_seq_private-for-.patch
+	patches.kernel.org/5.19.4-067-bpf-Acquire-map-uref-in-.init_seq_private-for-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
