HID: multitouch: new device class fix Lenovo X12 trackpad sticky (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1472,6 +1472,7 @@
 	patches.kernel.org/5.19.4-254-x86-ibt-objtool-Add-IBT_NOSEAL.patch
 	patches.kernel.org/5.19.4-255-x86-kvm-Fix-missing-ENDBR-BUG-for-fastop-funct.patch
 	patches.kernel.org/5.19.4-256-thunderbolt-Change-downstream-router-s-TMU-rat.patch
+	patches.kernel.org/5.19.4-257-HID-multitouch-new-device-class-fix-Lenovo-X12.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
