scsi: ufs: ufs-exynos: Change ufs phy control sequence (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1507,6 +1507,7 @@
 	patches.kernel.org/5.19.4-289-habanalabs-gaudi-fix-shift-out-of-bounds.patch
 	patches.kernel.org/5.19.4-290-habanalabs-gaudi-mask-constant-value-before-ca.patch
 	patches.kernel.org/5.19.4-291-mmc-tmio-avoid-glitches-when-resetting.patch
+	patches.kernel.org/5.19.4-292-scsi-ufs-ufs-exynos-Change-ufs-phy-control-seq.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
