--- a/series.conf
+++ b/series.conf
@@ -1226,6 +1226,7 @@
 	patches.kernel.org/5.19.4-008-locking-atomic-Make-test_and_-_bit-ordered-on-.patch
 	patches.kernel.org/5.19.4-009-drm-nouveau-recognise-GA103.patch
 	patches.kernel.org/5.19.4-010-drm-ttm-Fix-dummy-res-NULL-ptr-deref-bug.patch
+	patches.kernel.org/5.19.4-011-drm-amdgpu-Only-disable-prefer_shadow-on-hawai.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
