--- a/series.conf
+++ b/series.conf
@@ -1518,6 +1518,7 @@
 	patches.kernel.org/5.19.4-300-mmc-renesas_sdhi-newer-SoCs-don-t-need-manual-.patch
 	patches.kernel.org/5.19.4-301-ACPI-PPTT-Leave-the-table-mapped-for-the-runti.patch
 	patches.kernel.org/5.19.4-302-RDMA-rxe-Limit-the-number-of-calls-to-each-tas.patch
+	patches.kernel.org/5.19.4-303-csky-kprobe-reclaim-insn_slot-on-kprobe-unregi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
