netfilter: nf_tables: really skip inactive sets when allocating name (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1411,6 +1411,7 @@
 	patches.kernel.org/5.19.4-193-netfilter-nf_ct_ftp-prefer-skb_linearize.patch
 	patches.kernel.org/5.19.4-194-netfilter-nf_ct_irc-cap-packet-search-space-to.patch
 	patches.kernel.org/5.19.4-195-netfilter-nf_tables-possible-module-reference-.patch
+	patches.kernel.org/5.19.4-196-netfilter-nf_tables-really-skip-inactive-sets-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
