--- a/series.conf
+++ b/series.conf
@@ -1417,6 +1417,7 @@
 	patches.kernel.org/5.19.4-199-netfilter-nf_tables-NFTA_SET_ELEM_KEY_END-requ.patch
 	patches.kernel.org/5.19.4-200-netfilter-nf_tables-disallow-NFT_SET_ELEM_CATC.patch
 	patches.kernel.org/5.19.4-201-netfilter-nf_tables-check-NFT_SET_CONCAT-flag-.patch
+	patches.kernel.org/5.19.4-202-powerpc-pci-Fix-get_phb_number-locking.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
