--- a/series.conf
+++ b/series.conf
@@ -1323,6 +1323,7 @@
 	patches.kernel.org/5.19.4-105-Input-iqs7222-fortify-slider-event-reporting.patch
 	patches.kernel.org/5.19.4-106-Input-iqs7222-protect-volatile-registers.patch
 	patches.kernel.org/5.19.4-107-Input-iqs7222-acknowledge-reset-before-writing.patch
+	patches.kernel.org/5.19.4-108-Input-iqs7222-handle-reset-during-ATI.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
