--- a/series.conf
+++ b/series.conf
@@ -1216,6 +1216,7 @@
 	patches.kernel.org/5.19.3-006-kexec-KEYS-make-the-code-in-bzImage64_verify_s.patch
 	patches.kernel.org/5.19.3-007-arm64-kexec_file-use-more-system-keyrings-to-v.patch
 	patches.kernel.org/5.19.3-008-Linux-5.19.3.patch
+	patches.kernel.org/5.19.4-001-ALSA-info-Fix-llseek-return-value-when-using-c.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
