--- a/series.conf
+++ b/series.conf
@@ -1438,6 +1438,7 @@
 	patches.kernel.org/5.19.4-220-ice-Fix-VSI-rebuild-WARN_ON-check-for-VF.patch
 	patches.kernel.org/5.19.4-221-ice-Fix-call-trace-with-null-VSI-during-VF-res.patch
 	patches.kernel.org/5.19.4-222-ice-Fix-VF-not-able-to-send-tagged-traffic-wit.patch
+	patches.kernel.org/5.19.4-223-ice-Fix-double-VLAN-error-when-entering-promis.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
