--- a/series.conf
+++ b/series.conf
@@ -1265,6 +1265,7 @@
 	patches.kernel.org/5.19.4-047-apparmor-fix-reference-count-leak-in-aa_pivotr.patch
 	patches.kernel.org/5.19.4-048-apparmor-Fix-memleak-in-aa_simple_write_to_buf.patch
 	patches.kernel.org/5.19.4-049-Documentation-ACPI-EINJ-Fix-obsolete-example.patch
+	patches.kernel.org/5.19.4-050-netfilter-nf_tables-fix-crash-when-nf_trace-is.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
