--- a/series.conf
+++ b/series.conf
@@ -1449,6 +1449,7 @@
 	patches.kernel.org/5.19.4-231-i40e-Fix-to-stop-tx_timeout-recovery-if-GLOBR-.patch
 	patches.kernel.org/5.19.4-232-blk-mq-run-queue-no-matter-whether-the-request.patch
 	patches.kernel.org/5.19.4-233-tools-rtla-Fix-command-symlinks.patch
+	patches.kernel.org/5.19.4-234-fec-Fix-timer-capture-timing-in-fec_ptp_enable.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
