--- a/series.conf
+++ b/series.conf
@@ -1454,6 +1454,7 @@
 	patches.kernel.org/5.19.4-236-stmmac-intel-Add-a-missing-clk_disable_unprepa.patch
 	patches.kernel.org/5.19.4-237-igb-Add-lock-to-avoid-data-race.patch
 	patches.kernel.org/5.19.4-238-kbuild-fix-the-modules-order-between-drivers-a.patch
+	patches.kernel.org/5.19.4-239-gcc-plugins-Undefine-LATENT_ENTROPY_PLUGIN-whe.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
