Input: iqs7222 - fortify slider event reporting (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1320,6 +1320,7 @@
 	patches.kernel.org/5.19.4-102-Input-exc3000-fix-return-value-check-of-wait_f.patch
 	patches.kernel.org/5.19.4-103-Input-mt6779-keypad-match-hardware-matrix-orga.patch
 	patches.kernel.org/5.19.4-104-Input-iqs7222-correct-slider-event-disable-log.patch
+	patches.kernel.org/5.19.4-105-Input-iqs7222-fortify-slider-event-reporting.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
