--- a/series.conf
+++ b/series.conf
@@ -1281,6 +1281,7 @@
 	patches.kernel.org/5.19.4-063-bpf-Don-t-reinit-map-value-in-prealloc_lru_pop.patch
 	patches.kernel.org/5.19.4-064-bpf-Acquire-map-uref-in-.init_seq_private-for-.patch
 	patches.kernel.org/5.19.4-065-bpf-Acquire-map-uref-in-.init_seq_private-for-.patch
+	patches.kernel.org/5.19.4-066-bpf-Acquire-map-uref-in-.init_seq_private-for-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
