scsi: ufs: core: Add UFSHCD_QUIRK_BROKEN_64BIT_ADDRESS (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1482,6 +1482,7 @@
 	patches.kernel.org/5.19.4-264-usb-gadget-uvc-calculate-the-number-of-request.patch
 	patches.kernel.org/5.19.4-265-usb-gadget-uvc-call-uvc-uvcg_warn-on-completed.patch
 	patches.kernel.org/5.19.4-266-PCI-aardvark-Fix-reporting-Slot-capabilities-o.patch
+	patches.kernel.org/5.19.4-267-scsi-ufs-core-Add-UFSHCD_QUIRK_BROKEN_64BIT_AD.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
