--- a/series.conf
+++ b/series.conf
@@ -1346,6 +1346,7 @@
 	patches.kernel.org/5.19.4-128-dt-bindings-arm-qcom-fix-MSM8916-MTP-compatibl.patch
 	patches.kernel.org/5.19.4-129-dt-bindings-arm-qcom-fix-MSM8994-boards-compat.patch
 	patches.kernel.org/5.19.4-130-dt-bindings-clock-qcom-gcc-msm8996-add-more-GC.patch
+	patches.kernel.org/5.19.4-131-dt-bindings-PCI-qcom-Fix-reset-conditional.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
