--- a/series.conf
+++ b/series.conf
@@ -1308,6 +1308,7 @@
 	patches.kernel.org/5.19.4-090-pinctrl-renesas-rzg2l-Return-EINVAL-for-pins-w.patch
 	patches.kernel.org/5.19.4-091-dt-bindings-pinctrl-mt8192-Add-drive-strength-.patch
 	patches.kernel.org/5.19.4-092-dt-bindings-pinctrl-mt8192-Use-generic-bias-in.patch
+	patches.kernel.org/5.19.4-093-pinctrl-nomadik-Fix-refcount-leak-in-nmk_pinct.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
