--- a/series.conf
+++ b/series.conf
@@ -1331,6 +1331,7 @@
 	patches.kernel.org/5.19.4-113-octeontx2-pf-Fix-NIX_AF_TL3_TL2X_LINKX_CFG-reg.patch
 	patches.kernel.org/5.19.4-114-octeontx2-af-Apply-tx-nibble-fixup-always.patch
 	patches.kernel.org/5.19.4-115-octeontx2-af-suppress-external-profile-loading.patch
+	patches.kernel.org/5.19.4-116-octeontx2-af-Fix-mcam-entry-resource-leak.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
