--- a/series.conf
+++ b/series.conf
@@ -1235,6 +1235,7 @@
 	patches.kernel.org/5.19.4-017-mmc-meson-gx-Fix-an-error-handling-path-in-mes.patch
 	patches.kernel.org/5.19.4-018-btrfs-unset-reloc-control-if-transaction-commi.patch
 	patches.kernel.org/5.19.4-019-btrfs-reset-RO-counter-on-block-group-if-we-fa.patch
+	patches.kernel.org/5.19.4-020-btrfs-fix-lost-error-handling-when-looking-up-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
