ASoC: SOF: Intel: hda-ipc: Do not process IPC reply before firmware boot (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1542,6 +1542,7 @@
 	patches.kernel.org/5.19.4-324-ALSA-hda-Fix-page-fault-in-snd_hda_codec_shutd.patch
 	patches.kernel.org/5.19.4-325-modules-Ensure-natural-alignment-for-.altinstr.patch
 	patches.kernel.org/5.19.4-326-ASoC-SOF-Intel-cnl-Do-not-process-IPC-reply-be.patch
+	patches.kernel.org/5.19.4-327-ASoC-SOF-Intel-hda-ipc-Do-not-process-IPC-repl.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
