--- a/series.conf
+++ b/series.conf
@@ -1381,6 +1381,7 @@
 	patches.kernel.org/5.19.4-163-fs-ntfs3-Do-not-change-mode-if-ntfs_set_ea-fai.patch
 	patches.kernel.org/5.19.4-164-fs-ntfs3-Fix-missing-i_op-in-ntfs_read_mft.patch
 	patches.kernel.org/5.19.4-165-nios2-page-fault-et.al.-are-not-restartable-sy.patch
+	patches.kernel.org/5.19.4-166-nios2-don-t-leave-NULLs-in-sys_call_table.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
