--- a/series.conf
+++ b/series.conf
@@ -1400,6 +1400,7 @@
 	patches.kernel.org/5.19.4-182-ASoC-tas2770-Fix-handling-of-mute-unmute.patch
 	patches.kernel.org/5.19.4-183-ASoC-codec-tlv320aic32x4-fix-mono-playback-via.patch
 	patches.kernel.org/5.19.4-184-IB-iser-Fix-login-with-authentication.patch
+	patches.kernel.org/5.19.4-185-RDMA-mlx5-Use-the-proper-number-of-ports.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
