--- a/series.conf
+++ b/series.conf
@@ -1348,6 +1348,7 @@
 	patches.kernel.org/5.19.4-130-dt-bindings-clock-qcom-gcc-msm8996-add-more-GC.patch
 	patches.kernel.org/5.19.4-131-dt-bindings-PCI-qcom-Fix-reset-conditional.patch
 	patches.kernel.org/5.19.4-132-spi-dt-bindings-cadence-add-missing-required.patch
+	patches.kernel.org/5.19.4-133-spi-dt-bindings-zynqmp-qspi-add-missing-requir.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
