ASoC: rsnd: care default case on rsnd_ssiu_busif_err_irq_ctrl() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1544,6 +1544,7 @@
 	patches.kernel.org/5.19.4-326-ASoC-SOF-Intel-cnl-Do-not-process-IPC-reply-be.patch
 	patches.kernel.org/5.19.4-327-ASoC-SOF-Intel-hda-ipc-Do-not-process-IPC-repl.patch
 	patches.kernel.org/5.19.4-328-ASoC-SOF-sof-client-probes-Only-load-the-drive.patch
+	patches.kernel.org/5.19.4-329-ASoC-rsnd-care-default-case-on-rsnd_ssiu_busif.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
