--- a/series.conf
+++ b/series.conf
@@ -1343,6 +1343,7 @@
 	patches.kernel.org/5.19.4-125-vsock-Set-socket-state-back-to-SS_UNCONNECTED-.patch
 	patches.kernel.org/5.19.4-126-dt-bindings-gpio-zynq-Add-missing-compatible-s.patch
 	patches.kernel.org/5.19.4-127-dt-bindings-arm-qcom-fix-Longcheer-L8150-compa.patch
+	patches.kernel.org/5.19.4-128-dt-bindings-arm-qcom-fix-MSM8916-MTP-compatibl.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
