--- a/series.conf
+++ b/series.conf
@@ -1515,6 +1515,7 @@
 	patches.kernel.org/5.19.4-297-of-overlay-Move-devicetree_corrupt-check-up.patch
 	patches.kernel.org/5.19.4-298-dmaengine-dw-axi-dmac-do-not-print-NULL-LLI-du.patch
 	patches.kernel.org/5.19.4-299-dmaengine-dw-axi-dmac-ignore-interrupt-if-no-d.patch
+	patches.kernel.org/5.19.4-300-mmc-renesas_sdhi-newer-SoCs-don-t-need-manual-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
