--- a/series.conf
+++ b/series.conf
@@ -1573,6 +1573,7 @@
 	patches.kernel.org/5.19.4-355-powerpc-64-Init-jump-labels-before-parse_early.patch
 	patches.kernel.org/5.19.4-356-venus-pm_helpers-Fix-warning-in-OPP-during-pro.patch
 	patches.kernel.org/5.19.4-357-video-fbdev-i740fb-Check-the-argument-of-i740_.patch
+	patches.kernel.org/5.19.4-358-MIPS-tlbex-Explicitly-compare-_PAGE_NO_EXEC-ag.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
