--- a/series.conf
+++ b/series.conf
@@ -1359,6 +1359,7 @@
 	patches.kernel.org/5.19.4-141-vdpa_sim-use-max_iotlb_entries-as-a-limit-in-v.patch
 	patches.kernel.org/5.19.4-142-vdpa_sim_blk-set-number-of-address-spaces-and-.patch
 	patches.kernel.org/5.19.4-143-tools-testing-cxl-Fix-cxl_hdm_decode_init-call.patch
+	patches.kernel.org/5.19.4-144-kbuild-dummy-tools-avoid-tmpdir-leak-in-dummy-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
