--- a/series.conf
+++ b/series.conf
@@ -1372,6 +1372,7 @@
 	patches.kernel.org/5.19.4-154-perf-probe-Fix-an-error-handling-path-in-parse.patch
 	patches.kernel.org/5.19.4-155-i2c-qcom-geni-Fix-GPI-DMA-buffer-sync-back.patch
 	patches.kernel.org/5.19.4-156-perf-parse-events-Fix-segfault-when-event-pars.patch
+	patches.kernel.org/5.19.4-157-perf-tests-Fix-Track-with-sched_switch-test-fo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
