mmc: meson-gx: Fix an error handling path in meson_mmc_probe() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1232,6 +1232,7 @@
 	patches.kernel.org/5.19.4-014-ata-libata-eh-Add-missing-command-name.patch
 	patches.kernel.org/5.19.4-015-mmc-pxamci-Fix-another-error-handling-path-in-.patch
 	patches.kernel.org/5.19.4-016-mmc-pxamci-Fix-an-error-handling-path-in-pxamc.patch
+	patches.kernel.org/5.19.4-017-mmc-meson-gx-Fix-an-error-handling-path-in-mes.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
