ACPI: PPTT: Leave the table mapped for the runtime usage (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1516,6 +1516,7 @@
 	patches.kernel.org/5.19.4-298-dmaengine-dw-axi-dmac-do-not-print-NULL-LLI-du.patch
 	patches.kernel.org/5.19.4-299-dmaengine-dw-axi-dmac-ignore-interrupt-if-no-d.patch
 	patches.kernel.org/5.19.4-300-mmc-renesas_sdhi-newer-SoCs-don-t-need-manual-.patch
+	patches.kernel.org/5.19.4-301-ACPI-PPTT-Leave-the-table-mapped-for-the-runti.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
