netfilter: nf_ct_ftp: prefer skb_linearize (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1408,6 +1408,7 @@
 	patches.kernel.org/5.19.4-190-netfilter-nf_tables-disallow-NFTA_SET_ELEM_KEY.patch
 	patches.kernel.org/5.19.4-191-netfilter-nf_ct_sane-remove-pseudo-skb-lineari.patch
 	patches.kernel.org/5.19.4-192-netfilter-nf_ct_h323-cap-packet-size-at-64k.patch
+	patches.kernel.org/5.19.4-193-netfilter-nf_ct_ftp-prefer-skb_linearize.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
