--- a/series.conf
+++ b/series.conf
@@ -1388,6 +1388,7 @@
 	patches.kernel.org/5.19.4-170-nios2-add-force_successful_syscall_return.patch
 	patches.kernel.org/5.19.4-171-iavf-Fix-adminq-error-handling.patch
 	patches.kernel.org/5.19.4-172-iavf-Fix-NULL-pointer-dereference-in-iavf_get_.patch
+	patches.kernel.org/5.19.4-173-iavf-Fix-reset-error-handling.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
