--- a/series.conf
+++ b/series.conf
@@ -1395,6 +1395,7 @@
 	patches.kernel.org/5.19.4-177-ASoC-SOF-Intel-hda-Fix-potential-buffer-overfl.patch
 	patches.kernel.org/5.19.4-178-ASoC-DPCM-Don-t-pick-up-BE-without-substream.patch
 	patches.kernel.org/5.19.4-179-ASoC-tas2770-Set-correct-FSYNC-polarity.patch
+	patches.kernel.org/5.19.4-180-ASoC-tas2770-Allow-mono-streams.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
