ASoC: Intel: sof_es8336: ignore GpioInt when looking for speaker/headset GPIO lines (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1553,6 +1553,7 @@
 	patches.kernel.org/5.19.4-335-ALSA-hda-realtek-Enable-speaker-and-mute-LEDs-.patch
 	patches.kernel.org/5.19.4-336-ASoC-SOF-Intel-hda-add-sanity-check-on-SSP-ind.patch
 	patches.kernel.org/5.19.4-337-ASoC-Intel-sof_es8336-Fix-GPIO-quirks-set-via-.patch
+	patches.kernel.org/5.19.4-338-ASoC-Intel-sof_es8336-ignore-GpioInt-when-look.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
