--- a/series.conf
+++ b/series.conf
@@ -1526,6 +1526,7 @@
 	patches.kernel.org/5.19.4-308-openrisc-io-Define-iounmap-argument-as-volatil.patch
 	patches.kernel.org/5.19.4-309-phy-samsung-phy-exynos-pcie-sanitize-init-powe.patch
 	patches.kernel.org/5.19.4-310-md-Notify-sysfs-sync_completed-in-md_reap_sync.patch
+	patches.kernel.org/5.19.4-311-md-raid5-Make-logic-blocking-check-consistent-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
