BPF: Fix potential bad pointer dereference in bpf_sys_bpf() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1276,6 +1276,7 @@
 	patches.kernel.org/5.19.4-058-mptcp-move-subflow-cleanup-in-mptcp_destroy_co.patch
 	patches.kernel.org/5.19.4-059-mptcp-do-not-queue-data-on-closed-subflows.patch
 	patches.kernel.org/5.19.4-060-selftests-mptcp-make-sendfile-selftest-work.patch
+	patches.kernel.org/5.19.4-061-BPF-Fix-potential-bad-pointer-dereference-in-b.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
