--- a/series.conf
+++ b/series.conf
@@ -1480,6 +1480,7 @@
 	patches.kernel.org/5.19.4-262-staging-r8188eu-add-error-handling-of-rtw_read.patch
 	patches.kernel.org/5.19.4-263-usb-cdns3-fix-use-after-free-at-workaround-2.patch
 	patches.kernel.org/5.19.4-264-usb-gadget-uvc-calculate-the-number-of-request.patch
+	patches.kernel.org/5.19.4-265-usb-gadget-uvc-call-uvc-uvcg_warn-on-completed.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
