dt-bindings: display: sun4i: Add D1 TCONs to conditionals (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1450,6 +1450,7 @@
 	patches.kernel.org/5.19.4-232-blk-mq-run-queue-no-matter-whether-the-request.patch
 	patches.kernel.org/5.19.4-233-tools-rtla-Fix-command-symlinks.patch
 	patches.kernel.org/5.19.4-234-fec-Fix-timer-capture-timing-in-fec_ptp_enable.patch
+	patches.kernel.org/5.19.4-235-dt-bindings-display-sun4i-Add-D1-TCONs-to-cond.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
