--- a/series.conf
+++ b/series.conf
@@ -1529,6 +1529,7 @@
 	patches.kernel.org/5.19.4-311-md-raid5-Make-logic-blocking-check-consistent-.patch
 	patches.kernel.org/5.19.4-312-nvmet-tcp-fix-lockdep-complaint-on-nvmet_tcp_w.patch
 	patches.kernel.org/5.19.4-313-drivers-md-fix-a-potential-use-after-free-bug.patch
+	patches.kernel.org/5.19.4-314-ext4-avoid-remove-directory-when-directory-is-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
