nios2: page fault et.al. are *not* restartable syscalls.. (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1380,6 +1380,7 @@
 	patches.kernel.org/5.19.4-162-fs-ntfs3-Fix-double-free-on-remount.patch
 	patches.kernel.org/5.19.4-163-fs-ntfs3-Do-not-change-mode-if-ntfs_set_ea-fai.patch
 	patches.kernel.org/5.19.4-164-fs-ntfs3-Fix-missing-i_op-in-ntfs_read_mft.patch
+	patches.kernel.org/5.19.4-165-nios2-page-fault-et.al.-are-not-restartable-sy.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
