--- a/series.conf
+++ b/series.conf
@@ -1310,6 +1310,7 @@
 	patches.kernel.org/5.19.4-092-dt-bindings-pinctrl-mt8192-Use-generic-bias-in.patch
 	patches.kernel.org/5.19.4-093-pinctrl-nomadik-Fix-refcount-leak-in-nmk_pinct.patch
 	patches.kernel.org/5.19.4-094-pinctrl-qcom-msm8916-Allow-CAMSS-GP-clocks-to-.patch
+	patches.kernel.org/5.19.4-095-pinctrl-amd-Don-t-save-restore-interrupt-statu.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
