--- a/series.conf
+++ b/series.conf
@@ -1294,6 +1294,7 @@
 	patches.kernel.org/5.19.4-076-SUNRPC-Don-t-reuse-bvec-on-retransmission-of-t.patch
 	patches.kernel.org/5.19.4-077-ASoC-qdsp6-q6apm-dai-unprepare-stream-if-its-a.patch
 	patches.kernel.org/5.19.4-078-virtio-VIRTIO_HARDEN_NOTIFICATION-is-broken.patch
+	patches.kernel.org/5.19.4-079-virtio_net-fix-memory-leak-inside-XPD_TX-with-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
