--- a/series.conf
+++ b/series.conf
@@ -1257,6 +1257,7 @@
 	patches.kernel.org/5.19.4-039-dt-bindings-usb-mtk-xhci-Allow-wakeup-interrup.patch
 	patches.kernel.org/5.19.4-040-can-ems_usb-fix-clang-s-Wunaligned-access-warn.patch
 	patches.kernel.org/5.19.4-041-apparmor-fix-quiet_denied-for-file-rules.patch
+	patches.kernel.org/5.19.4-042-apparmor-fix-absroot-causing-audited-secids-to.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
