ASoC: tas2770: Drop conflicting set_bias_level power setting (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1396,6 +1396,7 @@
 	patches.kernel.org/5.19.4-178-ASoC-DPCM-Don-t-pick-up-BE-without-substream.patch
 	patches.kernel.org/5.19.4-179-ASoC-tas2770-Set-correct-FSYNC-polarity.patch
 	patches.kernel.org/5.19.4-180-ASoC-tas2770-Allow-mono-streams.patch
+	patches.kernel.org/5.19.4-181-ASoC-tas2770-Drop-conflicting-set_bias_level-p.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
