net: genl: fix error path memory leak in policy dumping (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1432,6 +1432,7 @@
 	patches.kernel.org/5.19.4-214-net-dsa-felix-fix-ethtool-256-511-and-512-1023.patch
 	patches.kernel.org/5.19.4-215-net-mscc-ocelot-fix-incorrect-ndo_get_stats64-.patch
 	patches.kernel.org/5.19.4-216-net-mscc-ocelot-fix-address-of-SYS_COUNT_TX_AG.patch
+	patches.kernel.org/5.19.4-217-net-genl-fix-error-path-memory-leak-in-policy-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
