--- a/series.conf
+++ b/series.conf
@@ -1575,6 +1575,7 @@
 	patches.kernel.org/5.19.4-357-video-fbdev-i740fb-Check-the-argument-of-i740_.patch
 	patches.kernel.org/5.19.4-358-MIPS-tlbex-Explicitly-compare-_PAGE_NO_EXEC-ag.patch
 	patches.kernel.org/5.19.4-359-f2fs-revive-F2FS_IOC_ABORT_VOLATILE_WRITE.patch
+	patches.kernel.org/5.19.4-360-f2fs-fix-null-ptr-deref-in-f2fs_get_dnode_of_d.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
