modpost: fix module versioning when a symbol lacks valid CRC (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1442,6 +1442,7 @@
 	patches.kernel.org/5.19.4-224-ice-Ignore-EEXIST-when-setting-promisc-mode.patch
 	patches.kernel.org/5.19.4-225-ice-Fix-clearing-of-promisc-mode-with-bridge-o.patch
 	patches.kernel.org/5.19.4-226-ice-Ignore-error-message-when-setting-same-pro.patch
+	patches.kernel.org/5.19.4-227-modpost-fix-module-versioning-when-a-symbol-la.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
