video: fbdev: i740fb: Check the argument of i740_calc_vclk() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1572,6 +1572,7 @@
 	patches.kernel.org/5.19.4-354-smb3-check-xattr-value-length-earlier.patch
 	patches.kernel.org/5.19.4-355-powerpc-64-Init-jump-labels-before-parse_early.patch
 	patches.kernel.org/5.19.4-356-venus-pm_helpers-Fix-warning-in-OPP-during-pro.patch
+	patches.kernel.org/5.19.4-357-video-fbdev-i740fb-Check-the-argument-of-i740_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
