dt-bindings: arm: qcom: fix MSM8994 boards compatibles (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1344,6 +1344,7 @@
 	patches.kernel.org/5.19.4-126-dt-bindings-gpio-zynq-Add-missing-compatible-s.patch
 	patches.kernel.org/5.19.4-127-dt-bindings-arm-qcom-fix-Longcheer-L8150-compa.patch
 	patches.kernel.org/5.19.4-128-dt-bindings-arm-qcom-fix-MSM8916-MTP-compatibl.patch
+	patches.kernel.org/5.19.4-129-dt-bindings-arm-qcom-fix-MSM8994-boards-compat.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
