netfilter: nf_ct_irc: cap packet search space to 4k (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1409,6 +1409,7 @@
 	patches.kernel.org/5.19.4-191-netfilter-nf_ct_sane-remove-pseudo-skb-lineari.patch
 	patches.kernel.org/5.19.4-192-netfilter-nf_ct_h323-cap-packet-size-at-64k.patch
 	patches.kernel.org/5.19.4-193-netfilter-nf_ct_ftp-prefer-skb_linearize.patch
+	patches.kernel.org/5.19.4-194-netfilter-nf_ct_irc-cap-packet-search-space-to.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
