--- a/series.conf
+++ b/series.conf
@@ -1564,6 +1564,7 @@
 	patches.kernel.org/5.19.4-346-ovl-warn-if-trusted-xattr-creation-fails.patch
 	patches.kernel.org/5.19.4-347-powerpc-ioda-iommu-debugfs-Generate-unique-deb.patch
 	patches.kernel.org/5.19.4-348-ALSA-core-Add-async-signal-helpers.patch
+	patches.kernel.org/5.19.4-349-ALSA-timer-Use-deferred-fasync-helper.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
