scsi: ufs: core: Add UFSHCD_QUIRK_HIBERN_FASTAUTO (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1483,6 +1483,7 @@
 	patches.kernel.org/5.19.4-265-usb-gadget-uvc-call-uvc-uvcg_warn-on-completed.patch
 	patches.kernel.org/5.19.4-266-PCI-aardvark-Fix-reporting-Slot-capabilities-o.patch
 	patches.kernel.org/5.19.4-267-scsi-ufs-core-Add-UFSHCD_QUIRK_BROKEN_64BIT_AD.patch
+	patches.kernel.org/5.19.4-268-scsi-ufs-core-Add-UFSHCD_QUIRK_HIBERN_FASTAUTO.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
