ipv6: do not use RT_TOS for IPv6 flowlabel (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1337,6 +1337,7 @@
 	patches.kernel.org/5.19.4-119-geneve-do-not-use-RT_TOS-for-IPv6-flowlabel.patch
 	patches.kernel.org/5.19.4-120-vxlan-do-not-use-RT_TOS-for-IPv6-flowlabel.patch
 	patches.kernel.org/5.19.4-121-mlx5-do-not-use-RT_TOS-for-IPv6-flowlabel.patch
+	patches.kernel.org/5.19.4-122-ipv6-do-not-use-RT_TOS-for-IPv6-flowlabel.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
