net/sunrpc: fix potential memory leaks in rpc_sysfs_xprt_state_change() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1419,6 +1419,7 @@
 	patches.kernel.org/5.19.4-201-netfilter-nf_tables-check-NFT_SET_CONCAT-flag-.patch
 	patches.kernel.org/5.19.4-202-powerpc-pci-Fix-get_phb_number-locking.patch
 	patches.kernel.org/5.19.4-203-spi-meson-spicc-add-local-pow2-clock-ops-to-pr.patch
+	patches.kernel.org/5.19.4-204-net-sunrpc-fix-potential-memory-leaks-in-rpc_s.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
