lib/list_debug.c: Detect uninitialized lists (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1532,6 +1532,7 @@
 	patches.kernel.org/5.19.4-314-ext4-avoid-remove-directory-when-directory-is-.patch
 	patches.kernel.org/5.19.4-315-ext4-block-range-must-be-validated-before-use-.patch
 	patches.kernel.org/5.19.4-316-ext4-avoid-resizing-to-a-partial-cluster-size.patch
+	patches.kernel.org/5.19.4-317-lib-list_debug.c-Detect-uninitialized-lists.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
