netfilter: nf_tables: NFTA_SET_ELEM_KEY_END requires concat and interval flags (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1414,6 +1414,7 @@
 	patches.kernel.org/5.19.4-196-netfilter-nf_tables-really-skip-inactive-sets-.patch
 	patches.kernel.org/5.19.4-197-netfilter-nf_tables-fix-scheduling-while-atomi.patch
 	patches.kernel.org/5.19.4-198-netfilter-nf_tables-validate-NFTA_SET_ELEM_OBJ.patch
+	patches.kernel.org/5.19.4-199-netfilter-nf_tables-NFTA_SET_ELEM_KEY_END-requ.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
