--- a/series.conf
+++ b/series.conf
@@ -1269,6 +1269,7 @@
 	patches.kernel.org/5.19.4-051-net-tap-NULL-pointer-derefence-in-dev_parse_he.patch
 	patches.kernel.org/5.19.4-052-NFSv4.1-Don-t-decrease-the-value-of-seq_nr_hig.patch
 	patches.kernel.org/5.19.4-053-NFSv4.1-Handle-NFS4ERR_DELAY-replies-to-OP_SEQ.patch
+	patches.kernel.org/5.19.4-054-NFSv4-Fix-races-in-the-legacy-idmapper-upcall.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
