um: add "noreboot" command line option for PANIC_TIMEOUT=-1 setups (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1511,6 +1511,7 @@
 	patches.kernel.org/5.19.4-293-pinctrl-intel-Check-against-matching-data-inst.patch
 	patches.kernel.org/5.19.4-294-cxl-Fix-a-memory-leak-in-an-error-handling-pat.patch
 	patches.kernel.org/5.19.4-295-PCI-ACPI-Guard-ARM64-specific-mcfg_quirks.patch
+	patches.kernel.org/5.19.4-296-um-add-noreboot-command-line-option-for-PANIC_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
