ASoC: qdsp6: q6apm-dai: unprepare stream if its already prepared (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1292,6 +1292,7 @@
 	patches.kernel.org/5.19.4-074-SUNRPC-Fix-xdr_encode_bool.patch
 	patches.kernel.org/5.19.4-075-SUNRPC-Reinitialise-the-backchannel-request-bu.patch
 	patches.kernel.org/5.19.4-076-SUNRPC-Don-t-reuse-bvec-on-retransmission-of-t.patch
+	patches.kernel.org/5.19.4-077-ASoC-qdsp6-q6apm-dai-unprepare-stream-if-its-a.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
