clk: qcom: ipq8074: dont disable gcc_sleep_clk_src (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1494,6 +1494,7 @@
 	patches.kernel.org/5.19.4-276-scsi-iscsi-Fix-HW-conn-removal-use-after-free.patch
 	patches.kernel.org/5.19.4-277-usb-dwc2-gadget-remove-D-pull-up-while-no-vbus.patch
 	patches.kernel.org/5.19.4-278-vboxguest-Do-not-use-devm-for-irq.patch
+	patches.kernel.org/5.19.4-279-clk-qcom-ipq8074-dont-disable-gcc_sleep_clk_sr.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
