netfilter: nf_ct_h323: cap packet size at 64k (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1407,6 +1407,7 @@
 	patches.kernel.org/5.19.4-189-fs-ntfs3-uninitialized-variable-in-ntfs_set_ac.patch
 	patches.kernel.org/5.19.4-190-netfilter-nf_tables-disallow-NFTA_SET_ELEM_KEY.patch
 	patches.kernel.org/5.19.4-191-netfilter-nf_ct_sane-remove-pseudo-skb-lineari.patch
+	patches.kernel.org/5.19.4-192-netfilter-nf_ct_h323-cap-packet-size-at-64k.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
