ext4: avoid resizing to a partial cluster size (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1531,6 +1531,7 @@
 	patches.kernel.org/5.19.4-313-drivers-md-fix-a-potential-use-after-free-bug.patch
 	patches.kernel.org/5.19.4-314-ext4-avoid-remove-directory-when-directory-is-.patch
 	patches.kernel.org/5.19.4-315-ext4-block-range-must-be-validated-before-use-.patch
+	patches.kernel.org/5.19.4-316-ext4-avoid-resizing-to-a-partial-cluster-size.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
