--- a/series.conf
+++ b/series.conf
@@ -1362,6 +1362,7 @@
 	patches.kernel.org/5.19.4-144-kbuild-dummy-tools-avoid-tmpdir-leak-in-dummy-.patch
 	patches.kernel.org/5.19.4-145-tools-build-Switch-to-new-openssl-API-for-test.patch
 	patches.kernel.org/5.19.4-146-NTB-ntb_tool-uninitialized-heap-data-in-tool_f.patch
+	patches.kernel.org/5.19.4-147-nfp-ethtool-fix-the-display-error-of-ethtool-m.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
