--- a/series.conf
+++ b/series.conf
@@ -1387,6 +1387,7 @@
 	patches.kernel.org/5.19.4-169-nios2-restarts-apply-only-to-the-first-sigfram.patch
 	patches.kernel.org/5.19.4-170-nios2-add-force_successful_syscall_return.patch
 	patches.kernel.org/5.19.4-171-iavf-Fix-adminq-error-handling.patch
+	patches.kernel.org/5.19.4-172-iavf-Fix-NULL-pointer-dereference-in-iavf_get_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
