f2fs: revive F2FS_IOC_ABORT_VOLATILE_WRITE (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1574,6 +1574,7 @@
 	patches.kernel.org/5.19.4-356-venus-pm_helpers-Fix-warning-in-OPP-during-pro.patch
 	patches.kernel.org/5.19.4-357-video-fbdev-i740fb-Check-the-argument-of-i740_.patch
 	patches.kernel.org/5.19.4-358-MIPS-tlbex-Explicitly-compare-_PAGE_NO_EXEC-ag.patch
+	patches.kernel.org/5.19.4-359-f2fs-revive-F2FS_IOC_ABORT_VOLATILE_WRITE.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
