powerpc/32: Don't always pass -mcpu=powerpc to the compiler (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1559,6 +1559,7 @@
 	patches.kernel.org/5.19.4-341-powerpc-watchdog-introduce-a-NMI-watchdog-s-fa.patch
 	patches.kernel.org/5.19.4-342-powerpc-pseries-mobility-set-NMI-watchdog-fact.patch
 	patches.kernel.org/5.19.4-343-powerpc-32-Set-an-IBAT-covering-up-to-_einitte.patch
+	patches.kernel.org/5.19.4-344-powerpc-32-Don-t-always-pass-mcpu-powerpc-to-t.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
