net: dsa: felix: fix ethtool 256-511 and 512-1023 TX packet counters (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1429,6 +1429,7 @@
 	patches.kernel.org/5.19.4-211-net-rtnetlink-fix-module-reference-count-leak-.patch
 	patches.kernel.org/5.19.4-212-net-sched-fix-misuse-of-qcpu-backlog-in-gnet_s.patch
 	patches.kernel.org/5.19.4-213-net-dsa-microchip-ksz9477-fix-fdb_dump-last-in.patch
+	patches.kernel.org/5.19.4-214-net-dsa-felix-fix-ethtool-256-511-and-512-1023.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
