mips: cavium-octeon: Fix missing of_node_put() in octeon2_usb_clocks_start (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1536,6 +1536,7 @@
 	patches.kernel.org/5.19.4-318-tty-serial-Fix-refcount-leak-bug-in-ucc_uart.c.patch
 	patches.kernel.org/5.19.4-319-KVM-PPC-Book3S-HV-Fix-rm_exit-entry-in-debugfs.patch
 	patches.kernel.org/5.19.4-320-vfio-Clear-the-caps-buf-to-NULL-after-free.patch
+	patches.kernel.org/5.19.4-321-mips-cavium-octeon-Fix-missing-of_node_put-in-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
