perf probe: Fix an error handling path in 'parse_perf_probe_command()' (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1369,6 +1369,7 @@
 	patches.kernel.org/5.19.4-151-fscache-don-t-leak-cookie-access-refs-if-inval.patch
 	patches.kernel.org/5.19.4-152-geneve-fix-TOS-inheriting-for-ipv4.patch
 	patches.kernel.org/5.19.4-153-nvme-fc-fix-the-fc_appid_store-return-value.patch
+	patches.kernel.org/5.19.4-154-perf-probe-Fix-an-error-handling-path-in-parse.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
