--- a/series.conf
+++ b/series.conf
@@ -1305,6 +1305,7 @@
 	patches.kernel.org/5.19.4-087-net-atm-bring-back-zatm-uAPI.patch
 	patches.kernel.org/5.19.4-088-selftests-forwarding-Fix-failing-tests-with-ol.patch
 	patches.kernel.org/5.19.4-089-dt-bindings-arm-qcom-fix-Alcatel-OneTouch-Idol.patch
+	patches.kernel.org/5.19.4-090-pinctrl-renesas-rzg2l-Return-EINVAL-for-pins-w.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
