--- a/series.conf
+++ b/series.conf
@@ -1476,6 +1476,7 @@
 	patches.kernel.org/5.19.4-258-PCI-Add-ACS-quirk-for-Broadcom-BCM5750x-NICs.patch
 	patches.kernel.org/5.19.4-259-platform-chrome-cros_ec_proto-don-t-show-MKBP-.patch
 	patches.kernel.org/5.19.4-260-staging-r8188eu-add-error-handling-of-rtw_read.patch
+	patches.kernel.org/5.19.4-261-staging-r8188eu-add-error-handling-of-rtw_read.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
