--- a/series.conf
+++ b/series.conf
@@ -1491,6 +1491,7 @@
 	patches.kernel.org/5.19.4-273-usb-typec-mux-Add-CONFIG-guards-for-functions.patch
 	patches.kernel.org/5.19.4-274-usb-host-ohci-ppc-of-Fix-refcount-leak-bug.patch
 	patches.kernel.org/5.19.4-275-usb-renesas-Fix-refcount-leak-bug.patch
+	patches.kernel.org/5.19.4-276-scsi-iscsi-Fix-HW-conn-removal-use-after-free.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
