--- a/series.conf
+++ b/series.conf
@@ -1330,6 +1330,7 @@
 	patches.kernel.org/5.19.4-112-dt-bindings-input-iqs7222-Extend-slider-mapped.patch
 	patches.kernel.org/5.19.4-113-octeontx2-pf-Fix-NIX_AF_TL3_TL2X_LINKX_CFG-reg.patch
 	patches.kernel.org/5.19.4-114-octeontx2-af-Apply-tx-nibble-fixup-always.patch
+	patches.kernel.org/5.19.4-115-octeontx2-af-suppress-external-profile-loading.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
