tools/vm/slabinfo: use alphabetic order when two values are equal (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1353,6 +1353,7 @@
 	patches.kernel.org/5.19.4-135-spi-dt-bindings-qcom-spi-geni-qcom-allow-three.patch
 	patches.kernel.org/5.19.4-136-ceph-use-correct-index-when-encoding-client-su.patch
 	patches.kernel.org/5.19.4-137-tools-testing-cxl-Fix-decoder-default-state.patch
+	patches.kernel.org/5.19.4-138-tools-vm-slabinfo-use-alphabetic-order-when-tw.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
