--- a/series.conf
+++ b/series.conf
@@ -1316,6 +1316,7 @@
 	patches.kernel.org/5.19.4-098-pinctrl-sunxi-Add-I-O-bias-setting-for-H6-R-PI.patch
 	patches.kernel.org/5.19.4-099-dt-bindings-pinctrl-mt8186-Add-and-use-drive-s.patch
 	patches.kernel.org/5.19.4-100-pinctrl-qcom-sm8250-Fix-PDC-map.patch
+	patches.kernel.org/5.19.4-101-rtc-spear-set-range-max.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
