--- a/series.conf
+++ b/series.conf
@@ -1412,6 +1412,7 @@
 	patches.kernel.org/5.19.4-194-netfilter-nf_ct_irc-cap-packet-search-space-to.patch
 	patches.kernel.org/5.19.4-195-netfilter-nf_tables-possible-module-reference-.patch
 	patches.kernel.org/5.19.4-196-netfilter-nf_tables-really-skip-inactive-sets-.patch
+	patches.kernel.org/5.19.4-197-netfilter-nf_tables-fix-scheduling-while-atomi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
