habanalabs: add terminating NULL to attrs arrays (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1502,6 +1502,7 @@
 	patches.kernel.org/5.19.4-284-scsi-lpfc-Fix-possible-memory-leak-when-failin.patch
 	patches.kernel.org/5.19.4-285-gadgetfs-ep_io-wait-until-IRQ-finishes.patch
 	patches.kernel.org/5.19.4-286-coresight-etm4x-avoid-build-failure-with-unrol.patch
+	patches.kernel.org/5.19.4-287-habanalabs-add-terminating-NULL-to-attrs-array.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
