tracing/eprobes: Have event probes be consistent with kprobes and uprobes (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1249,6 +1249,7 @@
 	patches.kernel.org/5.19.4-031-tracing-eprobes-Do-not-allow-eprobes-to-use-st.patch
 	patches.kernel.org/5.19.4-032-tracing-eprobes-Do-not-hardcode-comm-as-a-stri.patch
 	patches.kernel.org/5.19.4-033-tracing-eprobes-Fix-reading-of-string-fields.patch
+	patches.kernel.org/5.19.4-034-tracing-eprobes-Have-event-probes-be-consisten.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
