bpf: Don't reinit map value in prealloc_lru_pop (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1278,6 +1278,7 @@
 	patches.kernel.org/5.19.4-060-selftests-mptcp-make-sendfile-selftest-work.patch
 	patches.kernel.org/5.19.4-061-BPF-Fix-potential-bad-pointer-dereference-in-b.patch
 	patches.kernel.org/5.19.4-062-bpf-Disallow-bpf-programs-call-prog_run-comman.patch
+	patches.kernel.org/5.19.4-063-bpf-Don-t-reinit-map-value-in-prealloc_lru_pop.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
