--- a/series.conf
+++ b/series.conf
@@ -1440,6 +1440,7 @@
 	patches.kernel.org/5.19.4-222-ice-Fix-VF-not-able-to-send-tagged-traffic-wit.patch
 	patches.kernel.org/5.19.4-223-ice-Fix-double-VLAN-error-when-entering-promis.patch
 	patches.kernel.org/5.19.4-224-ice-Ignore-EEXIST-when-setting-promisc-mode.patch
+	patches.kernel.org/5.19.4-225-ice-Fix-clearing-of-promisc-mode-with-bridge-o.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
